--- a/views/finance.ejs
+++ b/views/finance.ejs
@@ -13,7 +13,7 @@
             <img class="app-logo me-sm-5 mb-3 mb-sm-0" src="/img/logo.7b621426.svg" alt="">
             
                 <div class="app-search">
-                    <input id="referral_url_menu_top" type="text" value="https://digitalWorld.com/auth/register?c=72799710">
+                    <input id="referral_url_menu_top" type="text" value="https://diggitalworld.com.co">
                     <a href="javascript:;" class="copy-clipboard" data-clipboard-action="copy" data-clipboard-target="#referral_url_menu_top" style="/* cursor:pointer; */">
                         <svg class="app-search-icon" viewBox="0 0 24 24">
                             <path fill="none" d="M0 0h24v24H0z"></path>
@@ -31,7 +31,7 @@
             <nav class="app-navbar">
                 <ul class="menuTopIcons">
                     <li class="">
-                        <a href="/">
+                        <a href="">
                             <div class="app-navbar-icon">                        
                                 <img src="/icons/home.png" alt="Home">
                             </div>
@@ -62,14 +62,14 @@
                             <span>Withdraw</span>
                         </a>
                     </li>
-                    <!-- <li class="">
+                    <li class="">
                         <a href="finance">
                             <div class="app-navbar-icon">                        
                                 <img src="/icons/retiro.png" alt="Finance">
                             </div>
                             <span>Finance</span>
                         </a>
-                    </li> -->
+                    </li>
                     <li class="nft">
                         <div class="app-navbar-icon">                        
                             <img src="/icons/NFT-icon.png" alt=" nft">
@@ -79,9 +79,9 @@
                     <li class="">
                         <a href="AboutUs">
                             <div class="app-navbar-icon">                        
-                                <img src="/icons/tickets.png" alt="Interest">
+                                <img src="/icons/tickets.png" alt="About us">
                             </div>
-                            <span>Interest</span>
+                            <span>About us</span>
                         </a>
                     </li>
                 </ul>
