--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
             <img class="app-logo me-sm-5 mb-3 mb-sm-0" src="./img/logo.7b621426.svg" alt="">
             
                 <div class="app-search">
-                    <input type="text" value="https://digitalWorld.com " name="contenido" id="contenido">
+                    <input type="text" value="https://diggitalworld.com.co " name="contenido" id="contenido">
                         <a id="copiar" class="copy-clipboard">
                         
                             <svg id="copia" class="app-search-icon" viewBox="0 0 24 24">
@@ -80,10 +80,12 @@
                         </a>
                     </li> -->
                     <li class="nft">
+                        
                             <div class="app-navbar-icon">                        
                                 <img src="./icons/NFT-icon.png" alt=" nft">
                             </div>
-                            <span>NFT</span>    
+                            <span>NFT</span>
+                        
                     </li>
                     <li class="">
                         <a href="AboutUs">
@@ -99,7 +101,7 @@
     </div>
     <header class="">''
         <div class="app-slider">
-            <p>Espacion para poner noticias</p>
+            <!-- <p>Espacion para poner noticias</p> -->
         </div>
     </header>
     
@@ -144,7 +146,7 @@
         </section>  
         <section class="support">
             <p>Support Email</p>
-            <p class="support-email">admin@diggitalWorld.com</p>
+            <p class="support-email">support@diggitalWorld.com.co</p>
         </section>        
     </footer>
 
