--- a/views/withdraw.ejs
+++ b/views/withdraw.ejs
@@ -13,7 +13,7 @@
             <img class="app-logo me-sm-5 mb-3 mb-sm-0" src="/img/logo.7b621426.svg" alt="">
             
                 <div class="app-search">
-                    <input id="contenido" name="contenido" type="text" value="https://digitalWorld.com/auth/register?c=72799710">
+                    <input id="contenido" name="contenido" type="text" value="https://diggitalworld.com.co">
                     <a id="copiar" class="copy-clipboard">
                         <svg class="app-search-icon" viewBox="0 0 24 24">
                             <path fill="none" d="M0 0h24v24H0z"></path>
@@ -87,7 +87,7 @@
                             <div class="app-navbar-icon">                        
                                 <img src="/icons/tickets.png" alt="Interest">
                             </div>
-                            <span class="about">About us</span>
+                            <span class="about">Interest</span>
                         </a>
                     </li>
                 </ul>
@@ -98,9 +98,12 @@
         <div class="main-section">
             <section class="overall-profit">
                 <div class="deposit-terms">
-                    <h2>Deposit terms</h2>
-                    <p>-Minimum deposit 20 USDT</p>
-                    <p>-Transfer cost 1 USDT</p>   
+                    <h2>Terms of withdraw </h2>
+                    <ul>
+                        <li>-Minimum withdraw 30 USDT</li>
+                        <li>-Transfer cost 1 USDT</li>
+                        <li>48 business hours for it to reflect on your withdrawal address</li>
+                    </ul>
                 </div>
                 <div class="input-deposit">
                     <form class="uploading-form" method="post" action="/withdraw"  id="uploadForm">
