--- a/public/css/login.css
+++ b/public/css/login.css
@@ -19,12 +19,13 @@ html{
 body{
     background-color: #010f24;
     margin:0;
-    /* font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji; */
     font-size:1rem;
     font-weight:400;
     line-height:1.5;color:#212529;
     text-align:left;
-    /* background-color:#fff */
+    display: grid;
+    min-height: 100vh;
+    grid-template-rows: auto 1fr auto;
 }
 
 
@@ -226,6 +227,9 @@ label {
     }
     .footer{
         justify-content: center;
+    }
+    .footer .text-footer {
+        display: none;
     }
     .footer section {
         display: flex;
