--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -13,7 +13,7 @@
             <img class="app-logo me-sm-5 mb-3 mb-sm-0" src="/img/logo.7b621426.svg" alt="">
             
                 <div class="app-search">
-                    <input id="contenido" name="contenido" type="text" value="https://diggitalWorld.com/auth/register?c=72799710">
+                    <input id="contenido" name="contenido" type="text" value="https://diggitalWorld.com.co">
                     <a id="copiar" class="copy-clipboard">
                         <svg class="app-search-icon" viewBox="0 0 24 24">
                             <path fill="none" d="M0 0h24v24H0z"></path>
@@ -108,7 +108,7 @@
                 
                 <p>Our investment allies play a fundamental role in our company, investing funds in order to expand credit coverage for more people who need our services. The interest margin that is acquired for each financial credit is 5% daily for a period of 90 days, this being the maximum term of total payment of the credit. Our investment allies will have daily dividends of 3% generated from that 5% of the interest paid and the company will use the remaining 2% to cover operating expenses and its self-sustainability.</p>
 
-                <p class="support-email">Support Email: <span>admin@diggitalWorld.com</span> </p>
+                <p class="support-email">Support Email: <span>support@diggitalWorld.com.co</span> </p>
             </section>
         </div>   
     </main>
