--- a/views/deposit.ejs
+++ b/views/deposit.ejs
@@ -13,7 +13,7 @@
             <img class="app-logo me-sm-5 mb-3 mb-sm-0" src="/img/logo.7b621426.svg" alt="">
             
                 <div class="app-search">
-                    <input id="urlRegister" name="urlRegister" type="text" value="https://digitalWorld.com/auth/register?c=72799710">
+                    <input id="urlRegister" name="urlRegister" type="text" value="https://diggitalworld.com.co">
                     <a id="urlCopiar" class="copy-clipboard">
                         <svg class="app-search-icon" viewBox="0 0 24 24">
                             <path fill="none" d="M0 0h24v24H0z"></path>
@@ -99,8 +99,11 @@
             <section class="overall-profit">
                 <div class="deposit-terms">
                     <h2>Deposit terms</h2>
-                    <p>-Minimum deposit 20 USDT</p>
-                    <p>-Transfer cost 1 USDT</p>   
+                    <ul>
+                        <li>Minimum deposit 30 USDT</li>
+                        <li>Transfer cost 1 USDT</li>
+                        <li>The deposit will be reflected after verification</li>
+                    </ul>
                 </div>
                 <div class="input-deposit">
                     <form class="uploading-form" method="post" action="/deposit" id="uploadForm">
