--- a/views/login.ejs
+++ b/views/login.ejs
@@ -62,7 +62,7 @@
                             </fieldset>
                             <a href="" class="r">Forgot Password?</a>
                         </div>
-                        <button type="submit" id="button-iniciar">SIGN IN</button>
+                        <button type="submit" id="button-iniciar">GET IN</button>
                     </form>
                         <fieldset>
                             <span class="cadastrar">
