--- a/public/css/index.css
+++ b/public/css/index.css
@@ -226,6 +226,7 @@ header {
 .main {
     display: flex;
     justify-content: center;
+    color: rgb(17 116 163);
 }
 
 
@@ -249,7 +250,7 @@ header {
 
 .overall-profit {
     background-color: var(--purple-light-1);
-    width: 350px;
+    width: 32%;
     height: 160px;
     border-radius: 20px;
     border-bottom: 0.5rem solid #ffc117;
@@ -285,27 +286,33 @@ header {
 }
 .active-contracts {
     background-color: var(--purple-light-1);
-    width: 400px;
+    width: 32%;
     height: 160px;
     border-radius: 20px;
     border-bottom: 0.5rem solid #ffc117;
     background-color: #dee3ed;
+}
+.active-contracts h2 {
+    display: flex;
+    margin-top: 16px;
+    margin-bottom: -27px;
+    margin-left: 125px;
 }
 .active-contracts .investment {
     display: flex;
     justify-content: space-evenly;
 }
 .active-contracts .investment img {
-    height: 87px;
+    height: 75px;
     display: flex;
-    margin-top: 20px;
-    margin-right: 20px;
-    margin-left: 20px;
+    margin-top: 14px;
+    margin-right: 23px;
+    margin-left: -11px;
 }
 .active-contracts span {
     position: relative;
-    top: 40px;
-    font-size: 23px;
+    top: 30px;
+    font-size: 21px;
     margin-left: -56px;
 }
 .active-contracts .btn {
@@ -476,7 +483,8 @@ header {
     .main .main-section .overall-profit{
         width: 95%;
         height: 100px;
-        margin-bottom: 10px;
+        margin-bottom: 16px;
+        margin-top: -21px;
         
     }
     .main .main-section .overall-profit h2 {
@@ -507,6 +515,7 @@ header {
 
     .main .main-section .active-contracts {
         width: 95%;
+        height: 135px;
     }
     .main .main-section .active-contracts .saldoDeposito {
         position: relative;
