--- a/views/index.ejs
+++ b/views/index.ejs
@@ -108,7 +108,7 @@
     <main class="main">
         <div class="main-section">
             <section class="overall-profit">
-                <h2>overall profit</h2>
+                <h2>Profit Wallet</h2>
                 <div class="benefits">
                     <img class="img-btc" src="/icons/btc.png" alt="">
                         <div class="saldoRetiro"><p>
