Funcionalidad a boton reinversion

--- a/views/withdraw.ejs
+++ b/views/withdraw.ejs
@@ -114,9 +114,9 @@
                                 TRX Tron (TRC20)
                             </p>
                         </section>
-                        <select id="rol" name="rol" class="select-css" tabindex="3">
+                        <select for="reinvestment" id="reinvestment" name="reinvestment" class="select-css" tabindex="3">
                             <option value="Withdraw" selected>withdraw</option>
-                            <option value="data entry">Reinvest</option>                    
+                            <option value="Reinvest">Reinvest</option>                    
                         </select>
                         <label for="userName">User</label>
                         <input type="text" name="userName" id="userName" placeholder="Enter Username" required aria-required="true">
