Modifique la url de registro y di estilos a la seccion de noticias

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
             <img class="app-logo me-sm-5 mb-3 mb-sm-0" src="./img/logo.7b621426.svg" alt="">
             
                 <div class="app-search">
-                    <input type="text" value="https://diggitalworld.com.co " name="contenido" id="contenido">
+                    <input type="text" value="https://www.diggitalworld.com.co/register" name="contenido" id="contenido">
                         <a id="copiar" class="copy-clipboard">
                         
                             <svg id="copia" class="app-search-icon" viewBox="0 0 24 24">
@@ -99,9 +99,16 @@
             </nav>    
         </main>
     </div>
-    <header class="">''
+    <header class="">
         <div class="app-slider">
-            <!-- <p>Espacion para poner noticias</p> -->
+            <div class="img-regalo">
+                <img src="/icons/regalos.png" alt="">
+            </div>
+            <div class="text-info">
+                <p>10% OF BENEFITS PER AFFILIATES</p>
+                <p>3% DAILY RETURN</p>
+            </div>
+            
         </div>
     </header>
     
