--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,6 +2,7 @@
     --purple-light-1: #FBFAFB;
     --font-family-titles: 'Dosis', sans-serif;
     --font-family-text: 'Red Hat Display', sans-serif;
+    --Light-grayish-blue-2: hsl(205, 33%, 90%);
 }
 
 body {
@@ -211,14 +212,30 @@ header {
     width: 67%;
     height: 200px;
     display: flex;
-    justify-content: center;
-    color: #FBFAFB;
+    align-content: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    color: tan;
     border-bottom: 0.5rem solid #ffc117;
     border-radius: 10px;
+    font-size: 23px;
+    font-family: 'Times New Roman', Times, serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
-
-
+.app-slider .img-regalo {
+    background-color: var(--Light-grayish-blue-2);
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+.app-slider .img-regalo img {
+    width: 63px;
+}
+.app-slider .text-info {
+    font-weight: 600;
+}
 
 
 
@@ -466,7 +483,23 @@ header {
         width: 95%;
         height: 150px;
         margin-top: -25px;
+        display: flex;
+        flex-direction: column;
     }
+    .app-slider .img-regalo {
+        width: 70px;
+        height: 70px;
+        margin-left: 85px;
+    }
+    .app-slider .img-regalo img {
+        width: 56px;
+    }
+    .app-slider .text-info  {
+        margin-left: 26px;
+        font-size: 20px;
+        font-weight: 600;
+    }
+
     .menuTopIcons .app-navbar-icon img {
         top: 12px;
         left: 0;
