--- a/views/deposit.ejs
+++ b/views/deposit.ejs
@@ -13,7 +13,7 @@
             <img class="app-logo me-sm-5 mb-3 mb-sm-0" src="/img/logo.7b621426.svg" alt="">
             
                 <div class="app-search">
-                    <input id="urlRegister" name="urlRegister" type="text" value="https://diggitalworld.com.co">
+                    <input id="urlRegister" name="urlRegister" type="text" value="https://www.diggitalworld.com.co/register">
                     <a id="urlCopiar" class="copy-clipboard">
                         <svg class="app-search-icon" viewBox="0 0 24 24">
                             <path fill="none" d="M0 0h24v24H0z"></path>
