--- a/views/finance.ejs
+++ b/views/finance.ejs
@@ -13,7 +13,7 @@
             <img class="app-logo me-sm-5 mb-3 mb-sm-0" src="/img/logo.7b621426.svg" alt="">
             
                 <div class="app-search">
-                    <input id="referral_url_menu_top" type="text" value="https://diggitalworld.com.co">
+                    <input id="referral_url_menu_top" type="text" value="https://www.diggitalworld.com.co/register">
                     <a href="javascript:;" class="copy-clipboard" data-clipboard-action="copy" data-clipboard-target="#referral_url_menu_top" style="/* cursor:pointer; */">
                         <svg class="app-search-icon" viewBox="0 0 24 24">
                             <path fill="none" d="M0 0h24v24H0z"></path>
