--- a/views/team.ejs
+++ b/views/team.ejs
@@ -97,6 +97,9 @@
     <main class="main">
         <div class="main-section">
             <section class="">
+                <div class="info-benefit">
+                    <p>Register the name of your invited user to receive a 10% profit</p>
+                </div>
                 <form class="uploading-form-team" method="post" action="/team"  id="uploadForm">
                     <div class="userNameText">
                         <label for="userName">User</label>
