--- a/views/withdraw.ejs
+++ b/views/withdraw.ejs
@@ -13,7 +13,7 @@
             <img class="app-logo me-sm-5 mb-3 mb-sm-0" src="/img/logo.7b621426.svg" alt="">
             
                 <div class="app-search">
-                    <input id="contenido" name="contenido" type="text" value="https://diggitalworld.com.co">
+                    <input id="contenido" name="contenido" type="text" value="https://www.diggitalworld.com.co/register">
                     <a id="copiar" class="copy-clipboard">
                         <svg class="app-search-icon" viewBox="0 0 24 24">
                             <path fill="none" d="M0 0h24v24H0z"></path>
@@ -100,8 +100,8 @@
                 <div class="deposit-terms">
                     <h2>Terms of withdraw </h2>
                     <ul>
-                        <li>-Minimum withdraw 30 USDT.</li>
-                        <li>-Transfer cost 1 USDT.</li>
+                        <li>Minimum withdraw 30 USDT.</li>
+                        <li>Transfer cost 1 USDT.</li>
                         <li>48 business hours for it to reflect on your withdrawal address.</li>
                         <li>If you choose to transfer the balance to investments, please re-enter your <strong>USER</strong> name in the withdrawal address field.</li>
                     </ul>
