Nueva version en diseño

--- a/public/css/deposit.css
+++ b/public/css/deposit.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #010f24;
+    background-color: #474a4f;
     font-family: var(--font-family-titles);
 }
 
@@ -117,6 +117,9 @@ body {
     background-color: #FBFAFB;
     border-radius: 10px;
     list-style: none;
+}
+.menuTopIcons li:active {
+    background-color: #001a50;
 }
 .menuTopIcons a {
     align-items: center; 
