--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,13 +101,14 @@
     </div>
     <header class="">
         <div class="app-slider">
-            <div class="img-regalo">
+            <img src="/img/background2.png" alt="">
+            <!-- <div class="img-regalo">
                 <img src="/icons/regalos.png" alt="">
             </div>
             <div class="text-info">
                 <p>10% OF BENEFITS PER AFFILIATES</p>
-                <p>3% DAILY RETURN</p>
-            </div>
+                <p>3% DAILY RETURN</p>Of
+            </div> -->
             
         </div>
     </header>
