--- a/public/css/index.css
+++ b/public/css/index.css
@@ -254,7 +254,7 @@ header {
 .main {
     display: flex;
     justify-content: center;
-    color: rgb(17 116 163);
+    color: #2e2c2c;
 }
 
 
@@ -268,7 +268,7 @@ header {
 }
 .main-section span {
     font-weight: 400;
-    color: #21456c;
+    color: #2e2c2c;
 }
 .main-section .overall-profit .benefits span {
     position: relative;
@@ -351,7 +351,7 @@ header {
     justify-content: center;
 }
 .active-contracts a {
-    background-color: #001a50;
+    background-color: #2e2c2c;
     width: 80%;
     display: flex;
     height: 100%;
